; ModuleID = '/home/carl/AnghaBench/sway/sway/tree/extr_container.c_container_add_mark.c'
source_filename = "/home/carl/AnghaBench/sway/sway/tree/extr_container.c_container_add_mark.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_container = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"mark\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @container_add_mark(%struct.sway_container* %0, i8* %1) #0 {
  %3 = alloca %struct.sway_container*, align 8
  %4 = alloca i8*, align 8
  store %struct.sway_container* %0, %struct.sway_container** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.sway_container*, %struct.sway_container** %3, align 8
  %6 = getelementptr inbounds %struct.sway_container, %struct.sway_container* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @strdup(i8* %8)
  %10 = call i32 @list_add(i32 %7, i32 %9)
  %11 = load %struct.sway_container*, %struct.sway_container** %3, align 8
  %12 = call i32 @ipc_event_window(%struct.sway_container* %11, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @list_add(i32, i32) #1

declare dso_local i32 @strdup(i8*) #1

declare dso_local i32 @ipc_event_window(%struct.sway_container*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
